--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang='en'>
     <head>
-        <title>Mince Recipe Guide</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href='styles.css' type = 'text/css' rel='stylesheet'>
+        <script src="index.js" defer></script>
+        <title>Mince Recipe Guide</title>
     </head>
     <body>
         <main>
