Adds recipe cards to index.html

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                     <input type="submit" id='submit' value="Submit">
                 </form>
             </div>
-            <div class = 'section-3'>
+            <section class = 'section-3'>
 
-            </div>
+            </section>
 
 
 
