--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <form>
                     <label for='ingredients_input' id='ingredients_header'>Let's Begin! Insert ingredients below:</label>
                     <br>
-                    <select name="name" id="ingredient_name"></select>
-                    <!-- <input type='text' id='ingredients_input' name='input'> -->
+                    <!-- <select name="name" id="ingredient_name"></select> -->
+                    <input type='text' id='ingredients_input' name='name' placeholder="Enter Ingredient">
                     <!-- <textarea id='ingredients' name='ingredients' height=100 width=100>Insert Ingredients</textarea> -->
                     <input type="submit" id='submit' value="Submit">
                 </form>
