class and id names

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
         <title>Mince Recipe Guide</title>
     </head>
     <body>
-        <main>
+        <main class="content">
             <div class='section-1'>
                 <h1>Mince.</h1>
             </div>
     
-            <div class='section-2'>
+            <div class='section-2' id="banner">
                 <!-- <img src= "food_platter_background.jpg" alt="food platter"> -->
-                <form>
+                <form class ='form' id='filter'>
                     <label for='ingredients_input' id='ingredients_header'>Let's Begin! Insert ingredients below:</label>
                     <br>
                     <!-- <select name="name" id="ingredient_name"></select> -->
@@ -27,12 +27,6 @@
             <section class = 'section-3'>
 
             </section>
-
-
-
-
-
-
 
 
         </main>
