--- a/show.html
+++ b/show.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="show.js" defer></script>
-    <title>Document</title>
+    <title>Recipe Details</title>
 </head>
 <body>
     <header>
