--- a/show.html
+++ b/show.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="show.css">
     <script src="show.js" defer></script>
     <title>Recipe Details</title>
 </head>
