--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <main class="content">
-            <div class='section-1'>
+            <div class='section-1' id='title'>
                 <h1>Mince.</h1>
             </div>
     
