list files created

--- a/list.html
+++ b/list.html
@@ -3,20 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='show.css' type = 'text/css' rel='stylesheet'>
-    <script src="user.js" defer></script>
-    <title>Saved Recipes</title>
+    <script src="show.js" defer></script>
+    <script src="list.js" defer></script>
+    <title>Shopping List</title>
 </head>
 <body>
     <header>
 
     </header>
-    <main>
+    <body>
 
-    </main>
+    </body>
     <footer>
 
     </footer>
-    
 </body>
 </html>
