--- a/user.html
+++ b/user.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='show.css' type = 'text/css' rel='stylesheet'>
     <script src="user.js" defer></script>
-    <title></title>
+    <title>Your Page</title>
 </head>
 <body>
     <header>
 
     </header>
     <main>
+        <!-- <img src="/images/notepad.jpg" alt="image of notepad for shopping list"> -->
 
     </main>
     <footer>
