Added navigation functionality across pages

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <title>Mince Recipe Guide</title>
     </head>
     <body>
+      <header>
+        <ul class='nav-bar'></ul>
+      </header>
         <main class="content">
             <div class='section-1' id='title'>
                 <h1>Mince.</h1>
