--- a/show.html
+++ b/show.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <header>
+      <ul class='nav-bar'></ul>
 
     </header>
     <main>
-        <a href="list.html">Go to Shopping List</a>
     </main>
     <footer>
 
