nav-bar styling and open in new tab attr

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
       <header>
-        <ul class='nav-bar'></ul>
+        <ul class='nav-bar' id='navigation'></ul>
       </header>
         <main class="content">
             <div class='section-1' id='title'>
