aligns header elements

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     </head>
     <body>
       <header>
-        <ul class='nav-bar' id='navigation'></ul>
+        <div class='nav-bar' id='page-nav'></div>
+        <div class='nav-bar' id='user-nav'></div>
       </header>
         <main class="content">
             <div class='section-1' id='title'>
