Refactors and cleans up index.js.  Adds header to recipe card section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <form class ='form' id='filter'>
                 </form>
             </div>
+            <div class='section-3-header'></div>
             <section class = 'section-3'>
 
             </section>
