Refactors user.js

--- a/user.html
+++ b/user.html
@@ -5,20 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='show.css' type = 'text/css' rel='stylesheet'>
     <script src="user.js" defer></script>
-    <title>Your Page</title>
+    <title></title>
 </head>
 <body>
     <header>
       <ul class='nav-bar'></ul>
-
     </header>
-    <main>
-        <!-- <img src="/images/notepad.jpg" alt="image of notepad for shopping list"> -->
-
+    <main class='user_page'>
     </main>
     <footer>
-
     </footer>
-    
 </body>
 </html>
